--- a/index.html
+++ b/index.html
@@ -10,18 +10,34 @@
     </head>
     <body>
         <main>        
-            <!-- <img src="year1sem2sched.png" width="1200"> -->
             <div class="maintext">
                 <h1 class="header">Andrew Devhub</h1>
                  <p class="headerDescription">
-                    This is my first created webpage, so please don't judge my potentially shit web design project.
+                    This is my first created webpage, so please don't judge my potentially bad web design project.
                 </p>
             </div>
             <div class="icons">
-                <a href="https://github.com/redwizgithub"><i class="fa-brands fa-github fa-xl" style="color: #ffffff;"></i></a>  
-                <a href="http://discordapp.com/users/328153261834240000"><i class="fa-brands fa-discord fa-xl" style="color: #ffffff;"></i></a>
-                <a href="https://www.youtube.com/channel/UCHRKE2KV25m-sv82Eoy0CQw"><i class="fa-brands fa-youtube fa-xl" style="color: #ffffff;"></i></a>
+                <a class="githubIcon" href="https://github.com/redwizgithub">
+                    <i class="fa-brands fa-github fa-xl" style="color: #ffffff;"></i>
+                </a>
+                <a class="discordIcon" href="http://discordapp.com/users/328153261834240000">
+                    <i class="fa-brands fa-discord fa-xl" style="color: #ffffff;"></i>
+                </a>
+                <a class="youtubeIcon" href="https://www.youtube.com/channel/UCHRKE2KV25m-sv82Eoy0CQw">
+                    <i class="fa-brands fa-youtube fa-xl" style="color: #ffffff;"></i>
+                </a>
             </div>
+            <div class="explorediv">
+                <a href=""><span class="explore">
+                    <i class="fa-solid fa-rocket fa-2xl" style="color: #000000;"></i>
+                    <i class="fa-solid fa-fire fa-xl" style="color: #f72702;"></i>
+                </span></a>
+            </div>
+            <!-- I'll put this in later
+            <div class="nav">
+                <a href=""><i class="fa-solid fa-briefcase fa-2xl" style="color: #000000;"></i></a>
+            </div>            
+            -->
         </main>
     </body>
 </html>
