new website transition (js introduction)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <script src="https://kit.fontawesome.com/990770d633.js" crossorigin="anonymous"></script>
     </head>
     <body>
-        <main>        
+        <div class="landingPage">        
             <div class="maintext">
                 <h1 class="header">Andrew Devhub</h1>
                  <p class="headerDescription">
@@ -28,7 +28,7 @@
                 </a>
             </div>
             <div class="explorediv">
-                <a href=""><span class="explore">
+                <a><span class="explore">
                     <i class="fa-solid fa-rocket fa-2xl" style="color: #000000;"></i>
                     <i class="fa-solid fa-fire fa-xl" style="color: #f72702;"></i>
                 </span></a>
@@ -38,6 +38,10 @@
                 <a href=""><i class="fa-solid fa-briefcase fa-2xl" style="color: #000000;"></i></a>
             </div>            
             -->
-        </main>
+        </div>
+        <div class="mainPage">
+            <!--WILL FINISH LATER-->
+        </div>
+        <script src="script.js"></script>
     </body>
 </html>
