--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
                 </p>
             </div>
             <div class="icons">
-                <a class="githubIcon" href="https://github.com/redwizgithub">
+                <a class="githubIcon" href="https://github.com/redwizgithub" target="_blank">
                     <i class="fa-brands fa-github fa-xl" style="color: #ffffff;"></i>
                 </a>
-                <a class="discordIcon" href="http://discordapp.com/users/328153261834240000">
+                <a class="discordIcon" href="http://discordapp.com/users/328153261834240000" target="_blank">
                     <i class="fa-brands fa-discord fa-xl" style="color: #ffffff;"></i>
                 </a>
-                <a class="youtubeIcon" href="https://www.youtube.com/channel/UCHRKE2KV25m-sv82Eoy0CQw">
+                <a class="youtubeIcon" href="https://www.youtube.com/channel/UCHRKE2KV25m-sv82Eoy0CQw" target="_blank">
                     <i class="fa-brands fa-youtube fa-xl" style="color: #ffffff;"></i>
                 </a>
             </div>
